# job-market-agent

./: .gitignore  CLAUDE.md  CONTEXT.md  PLAN.md  README.md  pyproject.toml
config/sources/: bing.yaml  testerhome.yaml
docs/2026-05-21-phase-0-1-foundation/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-05-23-cheaper-5xx-retries/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-05-23-issue-10-non-city-cjk-tokens/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-05-23-issue-6-parse-location-patterns/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-05-23-issue-7-detail-page-fetch/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-05-23-issue-8-url-freshness/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/2026-05-24-phase-2-bing-view/: MASTER-PLAN.md  MASTER-SPEC.md  PROGRESS.md  SKIPPED.md
docs/adr/: 0001-cross-source-dedup-via-canonical-id.md  0002-run-is-one-invocation-recorded-via-join-table.md  0003-canonical-id-is-latest-wins-not-run-stable.md  0003-location-probe-precedence.md  0003-url-freshness-as-durable-signal.md  0004-location-probe-first-known-city-wins.md  0005-bing-aggregator-source-and-snippet-data-quality.md
docs/agents/: domain.md  issue-tracker.md
docs/diagrams/: current-workflow.html  database-schema.html  module-dependency.html  phase-1-testerhome-crawl.html  phase-2-bing-aggregator-crawl.html  plan-phases-workflow.html
src/jma/: __init__.py  cli.py
tests/: conftest.py  test_smoke.py
tests/cli/: test_cli.py  test_crawl.py  (+2 more)
(+102 files in other folders)
