[project]
name = "jma"
version = "0.1.0"
description = "Job-market-agent — TesterHome crawl vertical slice"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "jinja2>=3.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "selectolax>=0.4.9",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jma"]

[project.scripts]
jma = "jma.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"src/jma/cli.py" = ["B008"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-m 'not live' -ra"
markers = [
    "live: opt-in tests that hit the real network (skipped by default)",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]
